<resources>
    <string name="app_name">State of EmergenZ</string>
    <string name="loading">Loading...</string>
    <string name="retry">Retry</string>

    <string-array name="nav_drawer_items">
        <item>Threat Level</item>
        <item>ZNews</item>
        <item>App Info</item>
    </string-array>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="close">Close</string>

    <string name="nav_drawer_threat_level">Threat Level</string>
    <string name="nav_drawer_news">ZNews</string>
    <string name="nav_drawer_about">About</string>

    <string name="zombie">Zombie</string>
    <string name="threat_level">Threat Level:</string>
    <string name="news">Znews</string>

    <string name="threat_levels">Threat Levels</string>
    <string name="alert_status">Alert Status</string>

    <!-- Threat Levels -->
    <string name="severe">Severe</string>
    <string name="high">High</string>
    <string name="elevated">Elevated</string>
    <string name="guarded">Guarded</string>
    <string name="low">Low</string>

    <!-- Threat Level Descriptions -->
    <string name="severe_description"><b>Severe</b> - RUN FOR YOUR LIFE!</string>
    <string name="high_description"><b>High</b> - Board up the windows.</string>
    <string name="elevated_description"><b>Elevated</b> - Start buying cans of tuna now.</string>
    <string name="guarded_description"><b>Guarded</b> - Check for walkers before you leave the house.</string>
    <string name="low_description"><b>Low</b> - Everything is fine.</string>

    <!-- About Fragment -->
    <string name="report_issue">Report Issue</string>
    <string name="email_me">Email me if you find any bugs: <a href="mailto:nicoleblumhorst@gmail.com">nicoleblumhorst@gmail.com</a></string>

    <string name="about_the_app"><b>About the App</b></string>
    <string name="why"><b>Why does this app exist?</b>  One day I was talking to my manager about <i>The Walking Dead</i> and other things that had come up in the news about the possibility of an impeding zombie apocalypse.  We realized there was no system in place to warn people when it does begin (see <i>Fear the Walking Dead</i> if you don’t believe me) so we decided there was a definite need for this app. </string>
    <string name="version_number"><b>Version Number:</b></string>

    <string name="about_the_developer"><b>About the Developer</b></string>
    <string name="name"><b>Name:</b> Nicole Blumhorst</string>
    <string name="website"><b>Website:</b> <a href="nicoleblumhorst.com">nicoleblumhorst.com</a></string>
    <string name="nickname"><b>Nickname:</b> Coleslaw</string>
    <string name="favorite_book"><b>Favorite Book:</b> <i>Harry Potter and the Deathly Hallows</i> or <i>Hyperbole and a Half</i></string>
    <string name="last_concert"><b>Last Concert:</b> Taylor Swift (<i>If/Then</i> if you wanna count musicals)</string>
    <string name="favorite_character"><b>Favorite Character on <i>The Walking Dead</i>:</b> Michonne</string>
    <string name="favorite_youtuber"><b>Favorite YouTuber:</b> Hannah Hart</string>


</resources>
