<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Report Issue -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_issue"
            style="@style/SectionHeader" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/vertical_margin"
            android:paddingBottom="@dimen/vertical_margin"
            android:autoLink="email"
            android:text="@string/email_me"/>

        <!-- About the App -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_the_app"
            style="@style/SectionHeader" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/vertical_margin"
            android:paddingBottom="@dimen/vertical_margin"
            android:text="@string/why"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/vertical_margin"
            android:paddingBottom="@dimen/vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_number"/>

            <TextView
                android:id="@+id/af_version_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>

        <!-- About the Developer -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_the_developer"
            style="@style/SectionHeader" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/vertical_margin"
            android:paddingBottom="@dimen/vertical_margin"
            android:text="@string/name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/vertical_margin"
            android:paddingBottom="@dimen/vertical_margin"
            android:text="@string/website"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/vertical_margin"
            android:paddingBottom="@dimen/vertical_margin"
            android:text="@string/nickname"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/vertical_margin"
            android:paddingBottom="@dimen/vertical_margin"
            android:text="@string/favorite_book"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/vertical_margin"
            android:paddingBottom="@dimen/vertical_margin"
            android:text="@string/last_concert"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/vertical_margin"
            android:paddingBottom="@dimen/vertical_margin"
            android:text="@string/favorite_character"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/vertical_margin"
            android:paddingBottom="@dimen/vertical_margin"
            android:text="@string/favorite_youtuber"/>

    </LinearLayout>
</ScrollView>