<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threat_levels"
        style="@style/CardHeader"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/vertical_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:background="@color/severe"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/severe_description"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/vertical_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:background="@color/high"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_description"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/vertical_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:background="@color/elevated"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elevated_description"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/vertical_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:background="@color/guarded"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guarded_description"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/vertical_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:background="@color/low"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_description"/>

    </LinearLayout>

</LinearLayout>