<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/wlf_level_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="150dp"
        android:layout_centerInParent="true"
        android:adjustViewBounds= "true" />

    <TextView android:id="@+id/wlf_threat_level_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/wlf_level_image_view"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:text="@string/threat_level" />

    <TextView android:id="@+id/wlf_zombie_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/wlf_threat_level_text_view"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:text="@string/zombie" />

    <Button
        android:id="@+id/wlf_news_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="24dp"
        android:text="@string/news"  />

    <Button
        android:id="@+id/wlf_info_button"
        android:layout_margin="7dp"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_help_outline_white_36dp"/>

</RelativeLayout>
